hphp/test/zend/good/Zend/tests/ns_068.php
<?hh
function foo() :mixed{}
namespace foo;
namespace bar;

<<__EntryPoint>>
function entrypoint_ns_068(): void {
  echo "===DONE===\n";
}
